--- a/css/static.css
+++ b/css/static.css
@@ -110,6 +110,11 @@ section.about {
   background: #FFF;
 }
 
+section.position {
+  background: #FFF;
+  font-size: 20px;
+}
+
 section.team {
   background: #9AE4E1;
   padding: 60px 0 30px;
